--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -131,8 +131,8 @@
                 flex-grow: 1;
                 max-width: 100%;
                 min-height: 1px;
-                padding-right: ($grid-gutter-width / 2);
-                padding-left:  ($grid-gutter-width / 2);
+                padding-right: ($gutter / 2);
+                padding-left:  ($gutter / 2);
             }
             @if $enable-flex-full {
                 .col-#{$breakpoint} {
