--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -122,7 +122,7 @@
         top: 0;
         left: 100%;
         //margin-top: -($dropdown-margin-top + $dropdown-padding-y - $border-width);
-        margin-top: unquote("calc(-#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width})");
+        margin-top: calc(-#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width});
         @include border-radius(0 $border-radius $border-radius $border-radius);
     }
     > a::after {
@@ -276,7 +276,7 @@
             bottom: 0;
             margin-top: 0;
             //margin-bottom: -($dropdown-margin-top + $dropdown-padding-y - $border-width);
-            margin-bottom: unquote("-calc(#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width})");
+            margin-bottom: calc(-#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width});
             @include border-radius($border-radius $border-radius $border-radius 0);
         }
     }
