--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -5,7 +5,7 @@
 
 // TODO: look at height calcs for select - still a bit off in IE 9 +
 $input-height:      (($font-size-base * $input-line-height) + ($input-padding-y * 2)) !default;
-$select-height:     unquote("calc(#{$input-height} + #{($border-width * 2)})") !default;
+$select-height:     calc(#{$input-height} + #{($border-width * 2)}) !default;
 
 // Textual form controls
 .form-control {
@@ -80,7 +80,7 @@ select.form-control {
         &.form-control-#{$size}:not([size]):not([multiple]),
         .input-group-#{$size} &.form-control:not([size]):not([multiple]) {
             $input-height:      (($font-size * $input-line-height) + ($padding-y * 2));
-            $select-height:     unquote("calc(#{$input-height} + #{($border-width * 2)})");
+            $select-height:     calc(#{$input-height} + #{($border-width * 2)});
             height: $select-height;
         }
     }
