Alternate menu icon - tweaked version for docs
This one has better support for mobile platforms.

Switch to the unicode character for ['IDENTICAL TO' (U+2261)](http://www.fileformat.info/info/unicode/char/2261/browsertest.htm)
from the ['TRIGRAM FOR HEAVEN' (U+2630)](http://www.fileformat.info/info/unicode/char/2630/browsertest.htm)

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -4,7 +4,7 @@
             <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
             <div class="clearfix hidden-md-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
-                    <span aria-hidden="true">&#9776;</span>
+                    <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
             <div class="collapse navbar-toggleable-sm" id="cf-topnav">
