Remove bottom margin on card header

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -64,6 +64,7 @@
 .card-header {
     @include clearfix;
     padding: $card-padding-y $card-padding-x;
+    margin-bottom: 0; // Removes the default margin-bottom of <hN>
     background-color: $card-cap-bg;
     border-bottom: $card-border-width solid $card-border-color;
 
