--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -67,6 +67,14 @@
   border-color: #f0f0f0;
 }
 
+.icon-menu {
+  display: inline-block;
+  margin-top: -.25rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: .75;
+}
+
 .cf-header {
   color: #fff;
   background-color: #292929;
