--- a/docs/_includes/page-header.html
+++ b/docs/_includes/page-header.html
@@ -18,6 +18,11 @@
     <p class="lead">
         Reusable components built to provide alerts, button groups, cards, input groups, media objects, navigation, and much more.
     </p>
+{% elsif page.group == "utilities" %}
+    <h1>Utilities</h1>
+    <p class="lead">
+        Dozens of utility classes with a single purpose designed to reduce the frequency of highly repetitive declarations in your CSS while allowing for quick and easy development.
+    </p>
 {% elsif page.group == "widgets" %}
     <h1>Widgets</h1>
     <p class="lead">
