--- a/docs/_includes/nav-sidebar.html
+++ b/docs/_includes/nav-sidebar.html
@@ -1,28 +1,30 @@
 <nav class="cf-links">
+
 {% for group in site.data.nav %}
-  {% assign link = group.pages | first %}
   {% assign slug = group.title | downcase | replace: ' ', '-' %}
+  {% assign partial = slug | prepend: '-' }} %}
 
   {% if page.url contains slug %}
+    {% unless page.url contains partial %}
+      <div class="h4">{{ group.title }}</div>
+      <ul class="nav">
+        {% for doc in group.pages %}
+          {% assign slug = doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' %}
+          {% capture slug %}/{{ slug }}/{% endcapture %}
 
-    <div class="h4">{{ group.title }}</div>
-    <ul class="nav">
-      {% for doc in group.pages %}
-        {% assign slug = doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' %}
-        {% capture slug %}/{{ slug }}/{% endcapture %}
+          {% assign active = nil %}
+          {% if page.url contains slug %}
+            {% assign active = 'active' %}
+          {% endif %}
 
-        {% assign active = nil %}
-        {% if page.url contains slug %}
-          {% assign active = 'active' %}
-        {% endif %}
-
-        <li class="nav-item">
-          <a href="{{ site.baseurl }}/{{ group.title | downcase | replace: ' ', '-' }}/{{ doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' }}" class="nav-link {{ active }}">
-            {{ doc.title }}
-          </a>
-        </li>
-      {% endfor %}
-    </ul>
-    {% endif %}
+          <li class="nav-item">
+            <a href="{{ site.baseurl }}/{{ group.title | downcase | replace: ' ', '-' }}/{{ doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' }}" class="nav-link {{ active }}">
+              {{ doc.title }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endunless %}
+  {% endif %}
 {% endfor %}
 </nav>
