--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -67,12 +67,20 @@
   border-color: #f0f0f0;
 }
 
+.icon-menu {
+  display: inline-block;
+  margin-top: -.25rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: .75;
+}
+
 .cf-header {
   color: #fff;
   background-color: #292929;
 }
 
-@media (max-width: 47.9375em) {
+@media (max-width: 61.9375em) {
   .cf-header .nav-item {
     float: none;
   }
