--- a/components/tags/index.html
+++ b/components/tags/index.html
@@ -61,12 +61,12 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-md-up">
+            <div class="clearfix hidden-lg-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
-                    <span aria-hidden="true">&#9776;</span>
+                    <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
-            <div class="collapse navbar-toggleable-sm" id="cf-topnav">
+            <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
                         <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
@@ -81,14 +81,17 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/widgets/overview/" class="nav-link">Widgets</a>
                     </li>
-                    <li class="nav-item pull-md-right">
+                    <li class="nav-item ">
+                        <a href="/about/overview/" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item pull-lg-right">
                         <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    <li>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -112,10 +115,6 @@
             <div class="col-xs-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
-  
-  
-
-  
 
   
   
@@ -132,191 +131,190 @@
 
   
 
-    <div class="h4">Components</div>
-    <ul class="nav">
-      
-        
-        
+  
+  
 
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/alerts" class="nav-link ">
-            Alerts
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/breadcrumb" class="nav-link ">
-            Breadcrumb
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/button-group" class="nav-link ">
-            Button Group
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/cards" class="nav-link ">
-            Cards
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/grid-lines" class="nav-link ">
-            Grid Lines
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/input-group" class="nav-link ">
-            Input Group
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/jumbotron" class="nav-link ">
-            Jumbotron
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/list-group" class="nav-link ">
-            List Group
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/media-object" class="nav-link ">
-            Media Object
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/navbar" class="nav-link ">
-            Navbar
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/navs" class="nav-link ">
-            Navs
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/pagination" class="nav-link ">
-            Pagination
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/progress" class="nav-link ">
-            Progress
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/tags" class="nav-link active">
-            Tags
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/components/utilities" class="nav-link ">
-            Utilities
-          </a>
-        </li>
-      
-    </ul>
+  
     
+      <div class="h4">Components</div>
+      <ul class="nav">
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/alerts" class="nav-link ">
+              Alerts
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/breadcrumb" class="nav-link ">
+              Breadcrumb
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/button-group" class="nav-link ">
+              Button Group
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/cards" class="nav-link ">
+              Cards
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/grid-lines" class="nav-link ">
+              Grid Lines
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/input-group" class="nav-link ">
+              Input Group
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/jumbotron" class="nav-link ">
+              Jumbotron
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/list-group" class="nav-link ">
+              List Group
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/media-object" class="nav-link ">
+              Media Object
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/navbar" class="nav-link ">
+              Navbar
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/navs" class="nav-link ">
+              Navs
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/pagination" class="nav-link ">
+              Pagination
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/progress" class="nav-link ">
+              Progress
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/components/tags" class="nav-link active">
+              Tags
+            </a>
+          </li>
+        
+      </ul>
+    
+  
+
+  
+  
+
+  
 
   
   
@@ -339,6 +337,15 @@
 
                 <p>Small and adaptive tag for adding context to just about any content.</p>
 
+<h2 class="no_toc" id="contents">Contents</h2>
+
+<ul id="markdown-toc">
+  <li><a href="#example" id="markdown-toc-example">Example</a></li>
+  <li><a href="#contextual-variations" id="markdown-toc-contextual-variations">Contextual Variations</a></li>
+  <li><a href="#pill-tags" id="markdown-toc-pill-tags">Pill Tags</a></li>
+  <li><a href="#outline-tags" id="markdown-toc-outline-tags">Outline Tags</a></li>
+</ul>
+
 <h2 id="example">Example</h2>
 
 <p>Tags scale to match the size of the immediate parent element by using relative font sizing and <code class="highlighter-rouge">em</code> units.</p>
@@ -358,11 +365,13 @@
 <span class="nt">&lt;h5&gt;</span>Example heading <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag"</span><span class="nt">&gt;</span>New<span class="nt">&lt;/span&gt;&lt;/h5&gt;</span>
 <span class="nt">&lt;h6&gt;</span>Example heading <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag"</span><span class="nt">&gt;</span>New<span class="nt">&lt;/span&gt;&lt;/h6&gt;</span></code></pre></div>
 
-<h2 id="contextual-variations">Contextual variations</h2>
+<h2 id="contextual-variations">Contextual Variations</h2>
 
 <p>Add any of the below mentioned modifier classes to change the appearance of a tag.</p>
 
 <div class="cf-example" data-example-id="">
+<strong>Basic Tags:</strong>
+<p>
 <span class="tag">Default</span>
 <span class="tag tag-primary">Primary</span>
 <span class="tag tag-secondary">Secondary</span>
@@ -370,14 +379,40 @@
 <span class="tag tag-info">Info</span>
 <span class="tag tag-warning">Warning</span>
 <span class="tag tag-danger">Danger</span>
+</p>
+
+<strong>Anchor Tags:</strong>
+<p>
+<a href="#" class="tag">Default</a>
+<a href="#" class="tag tag-primary">Primary</a>
+<a href="#" class="tag tag-secondary">Secondary</a>
+<a href="#" class="tag tag-success">Success</a>
+<a href="#" class="tag tag-info">Info</a>
+<a href="#" class="tag tag-warning">Warning</a>
+<a href="#" class="tag tag-danger">Danger</a>
+</p>
 </div>
-<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag"</span><span class="nt">&gt;</span>Default<span class="nt">&lt;/span&gt;</span>
+<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;strong&gt;</span>Basic Tags:<span class="nt">&lt;/strong&gt;</span>
+<span class="nt">&lt;p&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag"</span><span class="nt">&gt;</span>Default<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-primary"</span><span class="nt">&gt;</span>Primary<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-secondary"</span><span class="nt">&gt;</span>Secondary<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-success"</span><span class="nt">&gt;</span>Success<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-info"</span><span class="nt">&gt;</span>Info<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-warning"</span><span class="nt">&gt;</span>Warning<span class="nt">&lt;/span&gt;</span>
-<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/span&gt;</span></code></pre></div>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;/p&gt;</span>
+
+<span class="nt">&lt;strong&gt;</span>Anchor Tags:<span class="nt">&lt;/strong&gt;</span>
+<span class="nt">&lt;p&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag"</span><span class="nt">&gt;</span>Default<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-primary"</span><span class="nt">&gt;</span>Primary<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-secondary"</span><span class="nt">&gt;</span>Secondary<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-success"</span><span class="nt">&gt;</span>Success<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-info"</span><span class="nt">&gt;</span>Info<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-warning"</span><span class="nt">&gt;</span>Warning<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;/p&gt;</span></code></pre></div>
 
 <div class="cf-callout cf-callout-warning">
 <h4 id="conveying-meaning-to-assistive-technologies">Conveying Meaning to Assistive Technologies</h4>
@@ -406,6 +441,55 @@
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-pill tag-warning"</span><span class="nt">&gt;</span>Warning<span class="nt">&lt;/span&gt;</span>
 <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-pill tag-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/span&gt;</span></code></pre></div>
 
+<h2 id="outline-tags">Outline Tags</h2>
+
+<p>Just like our buttons, you can get tags that are not quite as bold by using the <code class="highlighter-rouge">.tag-outline-*</code> contextual color modifier classes.  You can also combine this with the <code class="highlighter-rouge">.tag-pill</code> class.</p>
+
+<div class="cf-example" data-example-id="">
+<strong>Outline Tags:</strong>
+<p>
+<span class="tag tag-outline">Default</span>
+<span class="tag tag-outline-primary">Primary</span>
+<span class="tag tag-outline-secondary">Secondary</span>
+<span class="tag tag-outline-success">Success</span>
+<span class="tag tag-outline-info">Info</span>
+<span class="tag tag-outline-warning">Warning</span>
+<span class="tag tag-outline-danger">Danger</span>
+</p>
+
+<strong>Anchor Outline Tags:</strong>
+<p>
+<a href="#" class="tag tag-outline">Default</a>
+<a href="#" class="tag tag-outline-primary">Primary</a>
+<a href="#" class="tag tag-outline-secondary">Secondary</a>
+<a href="#" class="tag tag-outline-success">Success</a>
+<a href="#" class="tag tag-outline-info">Info</a>
+<a href="#" class="tag tag-outline-warning">Warning</a>
+<a href="#" class="tag tag-outline-danger">Danger</a>
+</p>
+</div>
+<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;strong&gt;</span>Outline Tags:<span class="nt">&lt;/strong&gt;</span>
+<span class="nt">&lt;p&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline"</span><span class="nt">&gt;</span>Default<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-primary"</span><span class="nt">&gt;</span>Primary<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-secondary"</span><span class="nt">&gt;</span>Secondary<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-success"</span><span class="nt">&gt;</span>Success<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-info"</span><span class="nt">&gt;</span>Info<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-warning"</span><span class="nt">&gt;</span>Warning<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-outline-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;/p&gt;</span>
+
+<span class="nt">&lt;strong&gt;</span>Anchor Outline Tags:<span class="nt">&lt;/strong&gt;</span>
+<span class="nt">&lt;p&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline"</span><span class="nt">&gt;</span>Default<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-primary"</span><span class="nt">&gt;</span>Primary<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-secondary"</span><span class="nt">&gt;</span>Secondary<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-success"</span><span class="nt">&gt;</span>Success<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-info"</span><span class="nt">&gt;</span>Info<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-warning"</span><span class="nt">&gt;</span>Warning<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"tag tag-outline-danger"</span><span class="nt">&gt;</span>Danger<span class="nt">&lt;/a&gt;</span>
+<span class="nt">&lt;/p&gt;</span></code></pre></div>
+
 
             </div>
         </div>
@@ -418,7 +502,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.1.0
+            Currently version: 1.2.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
