--- a/layout/flexbox/index.html
+++ b/layout/flexbox/index.html
@@ -61,12 +61,12 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-md-up">
+            <div class="clearfix hidden-lg-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
-                    <span aria-hidden="true">&#9776;</span>
+                    <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
-            <div class="collapse navbar-toggleable-sm" id="cf-topnav">
+            <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
                         <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
@@ -81,14 +81,17 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/widgets/overview/" class="nav-link">Widgets</a>
                     </li>
-                    <li class="nav-item pull-md-right">
+                    <li class="nav-item ">
+                        <a href="/about/overview/" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item pull-lg-right">
                         <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    <li>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -112,69 +115,76 @@
             <div class="col-xs-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
-  
-  
-
-  
 
   
   
 
   
 
-    <div class="h4">Layout</div>
-    <ul class="nav">
-      
-        
-        
+  
+  
 
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/overview" class="nav-link ">
-            Overview
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/grid" class="nav-link ">
-            Grid
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/responsive-utilities" class="nav-link ">
-            Responsive Utilities
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/flexbox" class="nav-link active">
-            Flexbox
-          </a>
-        </li>
-      
-    </ul>
+  
     
+      <div class="h4">Layout</div>
+      <ul class="nav">
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/overview" class="nav-link ">
+              Overview
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/grid" class="nav-link ">
+              Grid
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/responsive-utilities" class="nav-link ">
+              Responsive Utilities
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/flexbox" class="nav-link active">
+              Flexbox
+            </a>
+          </li>
+        
+      </ul>
+    
+  
+
+  
+  
+
+  
 
   
   
@@ -226,11 +236,12 @@
   <li><a href="/components/button-group/">Button Group</a>, which switches from <code class="highlighter-rouge">float</code>s to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/cards/#decks">Card Deck</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/cards/#groups">Card Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
+  <li><a href="/components/grid-lines/">Grid Lines</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/input-group/">Input Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/media-object/">Media Object</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
   <li><a href="/components/navs/">Navs</a>, which switches from <code class="highlighter-rouge">float</code>s to <code class="highlighter-rouge">display: flex;</code>.</li>
-  <li><a href="/components/utilities/#flexbox-alignment">Utility classes</a>, for alignment options for flexbox enabled components.</li>
-  <li>More coming!</li>
+  <li><a href="/components/navbar/#navbar-group">Navbar Group</a>, which switches from <code class="highlighter-rouge">display: table;</code> to <code class="highlighter-rouge">display: flex;</code>.</li>
+  <li><a href="/utilities/flexbox/">Utility classes</a>, for alignment options for flexbox enabled components.</li>
 </ul>
 
 <p>Vendor prefixes are provided in our compiled CSS with <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> via Grunt. Some bugs in IE10-11’s Flexbox implementation are worked around via <a href="https://github.com/luisrudge/postcss-flexbugs-fixes">postcss-flexbugs-fixes</a>.</p>
@@ -261,9 +272,11 @@
   <li><code class="highlighter-rouge">.btn-group-vertical-flex</code></li>
   <li><code class="highlighter-rouge">.card-deck-flex</code></li>
   <li><code class="highlighter-rouge">.card-group-flex</code></li>
+  <li><code class="highlighter-rouge">.gridline-flex</code></li>
   <li><code class="highlighter-rouge">.input-group-flex</code></li>
   <li><code class="highlighter-rouge">.media-flex</code></li>
   <li><code class="highlighter-rouge">.nav-flex</code></li>
+  <li><code class="highlighter-rouge">.navbar-group-flex</code></li>
 </ul>
 
 <h2 id="full-flexbox-mode">Full Flexbox Mode</h2>
@@ -291,6 +304,8 @@
 
 <p>Please be extra conscious of your user base when enabling flexbox in your project. Visit <a href="http://caniuse.com/#feat=flexbox">Can I use…</a> for details on browser support of flexbox.</p>
 
+<p>There are also a number of browser bugs and cross-browser issues with flexbox.  Some of which do not have possible workarounds, while there are other that do.  Check out the <a href="https://github.com/philipwalton/flexbugs">Flexbugs</a> repository for additional information.</p>
+
             </div>
         </div>
 
@@ -302,7 +317,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.1.0
+            Currently version: 1.2.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
