--- a/layout/grid/index.html
+++ b/layout/grid/index.html
@@ -61,12 +61,12 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-md-up">
+            <div class="clearfix hidden-lg-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
-                    <span aria-hidden="true">&#9776;</span>
+                    <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
-            <div class="collapse navbar-toggleable-sm" id="cf-topnav">
+            <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
                         <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
@@ -81,14 +81,17 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/widgets/overview/" class="nav-link">Widgets</a>
                     </li>
-                    <li class="nav-item pull-md-right">
+                    <li class="nav-item ">
+                        <a href="/about/overview/" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item pull-lg-right">
                         <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    <li>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -112,69 +115,76 @@
             <div class="col-xs-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
-  
-  
-
-  
 
   
   
 
   
 
-    <div class="h4">Layout</div>
-    <ul class="nav">
-      
-        
-        
+  
+  
 
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/overview" class="nav-link ">
-            Overview
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/grid" class="nav-link active">
-            Grid
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/responsive-utilities" class="nav-link ">
-            Responsive Utilities
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/flexbox" class="nav-link ">
-            Flexbox
-          </a>
-        </li>
-      
-    </ul>
+  
     
+      <div class="h4">Layout</div>
+      <ul class="nav">
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/overview" class="nav-link ">
+              Overview
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/grid" class="nav-link active">
+              Grid
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/responsive-utilities" class="nav-link ">
+              Responsive Utilities
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/flexbox" class="nav-link ">
+              Flexbox
+            </a>
+          </li>
+        
+      </ul>
+    
+  
+
+  
+  
+
+  
 
   
   
@@ -343,8 +353,8 @@
         <td>None (auto)</td>
         <td>576px (36rem)</td>
         <td>720px (45rem)</td>
-        <td>940px (58.75rem)</td>
-        <td>1140px (71.25rem)</td>
+        <td>960px (60rem)</td>
+        <td>1152px (72rem)</td>
       </tr>
       <tr>
         <th class="text-nowrap" scope="row">Class prefix</th>
@@ -878,6 +888,8 @@
 
 <p>Auto-layout for flexbox grid columns also means you can set the width of one column and the others will automatically resize around it. You may use predefined grid classes (as shown below), grid mixins, or inline widths.</p>
 
+<p>In the examples below, note that the other columns will resize no matter the width of the center column.</p>
+
 <div class="cf-example-row">
 
 <div class="cf-example" data-example-id="">
@@ -886,7 +898,19 @@
         1 of 3
     </div>
     <div class="col-xs-6">
-        2 of 3 (wider)
+        2 of 3 (col-xs-6)
+    </div>
+    <div class="col-xs">
+        3 of 3
+    </div>
+</div>
+
+<div class="row row-flex">
+    <div class="col-xs">
+        1 of 3
+    </div>
+    <div class="col-xs-5">
+        2 of 3 (col-xs-5)
     </div>
     <div class="col-xs">
         3 of 3
@@ -897,7 +921,19 @@
         1 of 3
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs-6"</span><span class="nt">&gt;</span>
-        2 of 3 (wider)
+        2 of 3 (col-xs-6)
+    <span class="nt">&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs"</span><span class="nt">&gt;</span>
+        3 of 3
+    <span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row row-flex"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs"</span><span class="nt">&gt;</span>
+        1 of 3
+    <span class="nt">&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs-5"</span><span class="nt">&gt;</span>
+        2 of 3 (col-xs-5)
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-xs"</span><span class="nt">&gt;</span>
         3 of 3
@@ -908,7 +944,7 @@
 
 <h3 id="alignment">Alignment</h3>
 
-<p>If you wish to have better control over your flexbox grid alignment, there are a handful of utility classes that might be helpful.  Information and examples can be found in the Flexbox Alignment section of the <a href="/components/utilities/#flexbox-alignment">Utility Classes page</a>.</p>
+<p>If you wish to have better control over your flexbox grid alignment, there are a handful of utility classes that might be helpful.  Information and examples can be found in the <a href="/utilities/flexbox/">Flexbox utilities page</a>.</p>
 
             </div>
         </div>
@@ -921,7 +957,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.1.0
+            Currently version: 1.2.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
