--- a/layout/overview/index.html
+++ b/layout/overview/index.html
@@ -61,12 +61,12 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-md-up">
+            <div class="clearfix hidden-lg-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
-                    <span aria-hidden="true">&#9776;</span>
+                    <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
-            <div class="collapse navbar-toggleable-sm" id="cf-topnav">
+            <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
                         <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
@@ -81,14 +81,17 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/widgets/overview/" class="nav-link">Widgets</a>
                     </li>
-                    <li class="nav-item pull-md-right">
+                    <li class="nav-item ">
+                        <a href="/about/overview/" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item pull-lg-right">
                         <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    <li>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -112,69 +115,76 @@
             <div class="col-xs-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
-  
-  
-
-  
 
   
   
 
   
 
-    <div class="h4">Layout</div>
-    <ul class="nav">
-      
-        
-        
+  
+  
 
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/overview" class="nav-link active">
-            Overview
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/grid" class="nav-link ">
-            Grid
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/responsive-utilities" class="nav-link ">
-            Responsive Utilities
-          </a>
-        </li>
-      
-        
-        
-
-        
-        
-
-        <li class="nav-item">
-          <a href="/layout/flexbox" class="nav-link ">
-            Flexbox
-          </a>
-        </li>
-      
-    </ul>
+  
     
+      <div class="h4">Layout</div>
+      <ul class="nav">
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/overview" class="nav-link active">
+              Overview
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/grid" class="nav-link ">
+              Grid
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/responsive-utilities" class="nav-link ">
+              Responsive Utilities
+            </a>
+          </li>
+        
+          
+          
+
+          
+          
+
+          <li class="nav-item">
+            <a href="/layout/flexbox" class="nav-link ">
+              Flexbox
+            </a>
+          </li>
+        
+      </ul>
+    
+  
+
+  
+  
+
+  
 
   
   
@@ -371,7 +381,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.1.0
+            Currently version: 1.2.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
