--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -2,24 +2,9 @@
 
 // TODO: Fix this file - bad layout and whatnot for now until after launch
 
-.video-wrapper {
-    /* width: 600px; */
-}
-.video-transcript {
-    position: relative;
-}
-.video-transcript .video-wrapper {
-    width: 600px;
-}
-.video-transcript .player-scripttxt {
+.player-fulldisplay .player-scripttxt {
     position: absolute;
     top: 0;
-    left: 620px;
-    width: 350px;
-    height: 337px;
-    overflow: auto;
-}
-.video-transcript .player-fulldisplay .player-scripttxt {
     left: auto;
     right: 0;
     width: 25%;
